--- a/实验三指导文档.md
+++ b/实验三指导文档.md
@@ -42,11 +42,11 @@
 
 #### 1.1 用例图
 
-<在此处填写你的用例图>
+<![图片](./my-preo/qq_image1)>
 
 #### 1.2 用例规约
 
-<在此处填写你的用例规约>
+<>
 
 用例规约格式示例：   
 
@@ -71,21 +71,21 @@
 
 #### 2.1 类图（静态视图）
 
-<在此处填写你的类图（静态视图）>
+<<![图片](./my-preo/qq_image2)>>
 
 #### 2.2 活动图（动态视图）
 
-<在此处填写你的活动图（动态视图）>
+<<![图片](./my-preo/qq_image3)>>
 
 ### 3. 详细设计
 
 #### 3.1 详细类图
 
-<在此处填写你的详细类图>
+<<![图片](./my-preo/qq_image4)>>
 
 #### 3.2 包图
 
-<在此处填写你的包图>
+<<![图片](./my-preo/qq_image5)>>
 
 ### <font color=red>4. 编码（实验四的内容，提交实验三报告时需删除此部分）
 
