--- a/实验三指导文档.md
+++ b/实验三指导文档.md
@@ -42,7 +42,7 @@
 
 #### 1.1 用例图
 
-<![图片](./my-preo/qq_image1)>
+<![图片](./my-preo/qq_image1.bmp)>
 
 #### 1.2 用例规约
 
@@ -71,21 +71,21 @@
 
 #### 2.1 类图（静态视图）
 
-<<![图片](./my-preo/qq_image2)>>
+<<![图片](./my-preo/qq_image2.bmp)>>
 
 #### 2.2 活动图（动态视图）
 
-<<![图片](./my-preo/qq_image3)>>
+<<![图片](./my-preo/qq_image3.bmp)>>
 
 ### 3. 详细设计
 
 #### 3.1 详细类图
 
-<<![图片](./my-preo/qq_image4)>>
+<<![图片](./my-preo/qq_image4.bmp)>>
 
 #### 3.2 包图
 
-<<![图片](./my-preo/qq_image5)>>
+<<![图片](./my-preo/qq_image5.bmp)>>
 
 ### <font color=red>4. 编码（实验四的内容，提交实验三报告时需删除此部分）
 
