--- a/实验三指导文档.md
+++ b/实验三指导文档.md
@@ -42,11 +42,11 @@
 
 #### 1.1 用例图
 
-<![图片](./my-preo/qq_image1.bmp)>
+<![图片](./my-preo/Image_68603353359190.jpg)>
 
 #### 1.2 用例规约
 
-<>
+<![图片](./my-preo/IMG_20250402_013606.jpg)>
 
 用例规约格式示例：   
 
@@ -71,21 +71,22 @@
 
 #### 2.1 类图（静态视图）
 
-<<![图片](./my-preo/qq_image2.bmp)>>
+<![图片](./my-preo/Image_68598811743671.jpg)>
+
 
 #### 2.2 活动图（动态视图）
 
-<<![图片](./my-preo/qq_image3.bmp)>>
+<![图片](./my-preo/Image_68592422431069.jpg)>
 
 ### 3. 详细设计
 
 #### 3.1 详细类图
 
-<<![图片](./my-preo/qq_image4.bmp)>>
+<![图片](./my-preo/Image_68585240392791.jpg)>
 
 #### 3.2 包图
 
-<<![图片](./my-preo/qq_image5.bmp)>>
+<![图片](./my-preo/Image_68580026956855.jpg)>
 
 ### <font color=red>4. 编码（实验四的内容，提交实验三报告时需删除此部分）
 
