--- a/实验三指导文档.md
+++ b/实验三指导文档.md
@@ -1,12 +1,12 @@
 # 实验三报告
 
-> 学号：<学号>
+> 学号：<*3225706004*>
 > 
-> 姓名：<姓名>
+> 姓名：<*彭溪霖*>
 > 
-> 指导老师：<指导老师>
+> 指导老师：<*张铠斌*>
 > 
-> 实验日期：<20XX-XX-XX>
+> 实验日期：<*2025-03-26*>
 
 ## 一、实验目的
 
@@ -15,7 +15,7 @@
     - 结构化分析与设计（SAD）
     - 面向对象分析与设计（OOAD）
 - 掌握OOAD与UML图的对应关系；
-![alt text](UML提纲.png)
+
   - 注意：UML图只是OOAD中的一部分（代码相关的部分），并不是OOAD的全部。例如：
     - 需求分析除了UML图外，还有文档说明；
     - 总体设计除了UML图外，还有UI设计、数据库设计等；
