--- a/实验三指导文档.md
+++ b/实验三指导文档.md
@@ -86,19 +86,4 @@
 
 #### 3.2 包图
 
-<![图片](Image_68580026956855.jpg)>
-
-### <font color=red>4. 编码（实验四的内容，提交实验三报告时需删除此部分）
-
-#### 4.1 代码实现
-
-<在此处填写你的代码实现（带必要注释及Markdown语法高亮）>
-
-插入代码的语法示例：
-```typescript {.line-numbers}
-
-```
-
-#### 4.2 结果验证
-
-<在此处填写你的结果截图></font>
+<![图片](Image_68580026956855.jpg
