--- a/实验三指导文档.md
+++ b/实验三指导文档.md
@@ -93,11 +93,127 @@
 #### 4.1 代码实现
 
 <在此处填写你的代码实现（带必要注释及Markdown语法高亮）>
+````// src/main/ets/pages/Index.ets
+import { AccountData } from '../database/AccountData'; // 导入账户数据类型定义
+import AccountTable from '../database/AccountTable';   // 导入数据库操作类
+import { common } from '@kit.AbilityKit';            // 导入HarmonyOS能力库
 
-插入代码的语法示例：
-```typescript {.line-numbers}
+// 应用主页面组件
+@Entry
+@Component
+struct Index {
+  // 状态变量：页面消息提示
+  @State message: string = '初始化中...';
+  // 状态变量：账户数据列表
+  @State accounts: AccountData[] = [];
 
+  // 数据库操作实例（初始为null）
+  private accountTable: AccountTable | null = null;
+  // 获取Stage模型的上下文能力
+  private context: common.UIAbilityContext = getContext(this) as common.UIAbilityContext;
+
+  // 组件生命周期：页面即将显示时触发
+  aboutToAppear() {
+    // 检查上下文是否有效
+    if (this.context) {
+      // 初始化数据库操作实例
+      this.accountTable = new AccountTable(this.context);
+      // 加载初始数据
+      this.initData();
+    } else {
+      this.message = '获取上下文失败';
+      console.error('Stage模型上下文获取失败');
+    }
+  }
+
+  /**
+   * 初始化数据方法
+   * 1. 初始化数据库
+   * 2. 查询所有账户数据
+   */
+  private async initData() {
+    if (!this.accountTable) return;
+
+    try {
+      // 初始化数据库连接
+      await this.accountTable.init();
+      // 查询所有账户记录
+      this.accounts = await this.accountTable.queryAll();
+      // 更新状态提示
+      this.message = `加载完成，共 ${this.accounts.length} 条记录`;
+    } catch (err) {
+      // 错误处理
+      this.message = `初始化失败: ${JSON.stringify(err)}`;
+      console.error('数据库初始化失败:', err);
+    }
+  }
+
+  // 构建UI界面
+  build() {
+    Row() {
+      Column() {
+        // 顶部消息提示文本
+        Text(this.message)
+          .fontSize(20)
+          .margin(10);
+
+        // 账户数据列表
+        List({ space: 10, initialIndex: 0 }) {
+          ForEach(this.accounts, (item: AccountData) => {
+            ListItem() {
+              Row() {
+                // 显示账户ID（占宽20%）
+                Text(`ID: ${item.id}`).width('20%')
+                // 显示账户类型文本（占宽30%）
+                Text(item.typeText).width('30%')
+                // 显示类型中文描述（支出/收入）
+                Text(item.accountType === 0 ? '支出' : '收入').width('20%')
+                // 显示金额（格式化显示）
+                Text(`¥${item.amount.toFixed(2)}`).width('30%')
+              }
+              .width('100%')
+            }
+          }, (item: AccountData) => item.id.toString()) // 使用ID作为列表项唯一键
+        }
+        .width('100%')
+        .height('60%')
+        .layoutWeight(1)
+
+        // 添加示例数据按钮
+        Button('添加示例数据', { type: ButtonType.Capsule })
+          .onClick(async () => {
+            if (!this.accountTable) return;
+
+            try {
+              // 插入测试数据
+              await this.accountTable.insert({
+                accountType: 0,       // 类型：支出
+                typeText: '餐饮',    // 类型描述
+                amount: 50.0         // 金额
+              });
+              // 重新查询更新列表
+              this.accounts = await this.accountTable.queryAll();
+              // 更新状态提示
+              this.message = `添加成功，共 ${this.accounts.length} 条记录`;
+            } catch (err) {
+              // 错误处理
+              this.message = `添加失败: ${JSON.stringify(err)}`;
+              console.error('添加数据失败:', err);
+            }
+          })
+          .margin(10)
+      }
+      .width('100%')
+      .height('100%')
+      .padding(12)
+    }
+    .height('100%')
+  }
+}
 ```
+
+
+
 
 #### 4.2 结果验证
 
