--- a/实验三指导文档.md
+++ b/实验三指导文档.md
@@ -93,6 +93,7 @@
 #### 4.1 代码实现
 
 <在此处填写你的代码实现（带必要注释及Markdown语法高亮）>
+
 ````// src/main/ets/pages/Index.ets
 import { AccountData } from '../database/AccountData'; // 导入账户数据类型定义
 import AccountTable from '../database/AccountTable';   // 导入数据库操作类
@@ -209,9 +210,340 @@ struct Index {
     }
     .height('100%')
   }
+}```
+````build-profile.json5
+{
+  "apiType": "stageMode",
+  "buildOption": {
+    "arkOptions": {
+      "runtimeOnly": {
+
+      }
+    }
+  },
+  "buildOptionSet": [
+    {
+      "name": "release",
+      "arkOptions": {
+        "obfuscation": {
+          "ruleOptions": {
+            "enable": false,
+            "files": ["./obfuscation-rules.txt"]
+          }
+        }
+      }
+    }
+  ],
+
+  "targets": [
+    {
+      "name": "default",
+      "runtimeOS": "HarmonyOS",
+      "source": {},  // 添加必需的 source 字段
+      "resource": {}, // 添加必需的 resource 字段
+
+    },
+    {
+      "name": "ohosTest",
+      "runtimeOS": "HarmonyOS"
+    }
+  ]
+}```
+````// src/main/ets/common/RdbUtil.ts
+import relationalStore from '@ohos.data.relationalStore'; // 导入关系型数据库模块
+import common from '@ohos.app.ability.common'; // 导入Ability上下文模块
+
+/**
+ * 关系型数据库工具类
+ * 封装了HarmonyOS关系型数据库的常用操作
+ */
+export default class RdbUtil {
+  private rdbStore: relationalStore.RdbStore | null = null; // 数据库实例
+
+  /**
+   * 构造函数
+   * @param context Ability上下文
+   * @param tableName 表名
+   * @param createTableSql 建表SQL语句
+   * @param columns 查询列名数组
+   */
+  constructor(
+    private context: common.UIAbilityContext,
+    private tableName: string,
+    private createTableSql: string,
+    private columns: string[]
+  ) {}
+
+  /**
+   * 初始化数据库
+   * 1. 创建/打开数据库
+   * 2. 执行建表SQL
+   */
+  async initialize(): Promise<void> {
+    if (this.rdbStore) return; // 避免重复初始化
+
+    // 数据库配置
+    const config: relationalStore.StoreConfig = {
+      name: `${this.tableName}.db`, // 数据库文件名
+      securityLevel: relationalStore.SecurityLevel.S1 // 安全级别
+    };
+
+    try {
+      // 异步获取数据库实例
+      this.rdbStore = await new Promise((resolve, reject) => {
+        relationalStore.getRdbStore(this.context, config, (err, store) => {
+          err ? reject(err) : resolve(store);
+        });
+      });
+
+      // 执行建表语句
+      await this.executeSql(this.createTableSql);
+    } catch (err) {
+      console.error(`Database init failed: ${JSON.stringify(err)}`);
+      throw err; // 抛出异常供上层处理
+    }
+  }
+
+  /**
+   * 执行SQL语句（内部方法）
+   * @param sql 要执行的SQL语句
+   */
+  private async executeSql(sql: string): Promise<void> {
+    return new Promise((resolve, reject) => {
+      this.rdbStore!.executeSql(sql, [], (err) => {
+        err ? reject(err) : resolve();
+      });
+    });
+  }
+
+  /**
+   * 插入数据
+   * @param valueBucket 要插入的数据键值对
+   * @returns 插入的行ID
+   */
+  async insert(valueBucket: relationalStore.ValuesBucket): Promise<number> {
+    return new Promise((resolve, reject) => {
+      this.rdbStore!.insert(this.tableName, valueBucket, (err, rowId) => {
+        err ? reject(err) : resolve(rowId);
+      });
+    });
+  }
+
+  /**
+   * 更新数据
+   * @param predicates 查询条件
+   * @param valueBucket 要更新的数据键值对
+   * @returns 受影响的行数
+   */
+  async update(
+    predicates: relationalStore.RdbPredicates,
+    valueBucket: relationalStore.ValuesBucket
+  ): Promise<number> {
+    return new Promise((resolve, reject) => {
+      this.rdbStore!.update(valueBucket, predicates, (err, rows) => {
+        err ? reject(err) : resolve(rows);
+      });
+    });
+  }
+
+  /**
+   * 删除数据
+   * @param predicates 查询条件
+   * @returns 受影响的行数
+   */
+  async delete(predicates: relationalStore.RdbPredicates): Promise<number> {
+    return new Promise((resolve, reject) => {
+      this.rdbStore!.delete(predicates, (err, rows) => {
+        err ? reject(err) : resolve(rows);
+      });
+    });
+  }
+
+  /**
+   * 查询数据
+   * @param predicates 查询条件
+   * @returns 结果集对象
+   */
+  async query(predicates: relationalStore.RdbPredicates): Promise<relationalStore.ResultSet> {
+    return new Promise((resolve, reject) => {
+      this.rdbStore!.query(predicates, this.columns, (err, result) => {
+        err ? reject(err) : resolve(result);
+      });
+    });
+  }
+
+  /**
+   * 创建查询条件对象
+   * @returns 新的RdbPredicates实例
+   */
+  createPredicates(): relationalStore.RdbPredicates {
+    return new relationalStore.RdbPredicates(this.tableName);
+  }
+}
+// src/main/ets/database/AccountData.ts
+export interface AccountData {
+  id: number;
+  accountType: number; // 0-支出 1-收入
+  typeText: string;
+  amount: number;
+}
+
+export interface QueryResult {
+  success: boolean;
+  data: AccountData[];
+  message?: string;
+}```
+````// src/main/ets/database/AccountTable.ts
+import relationalStore from '@ohos.data.relationalStore'; // 导入关系型数据库模块
+import { AccountData } from './AccountData'; // 导入账户数据类型定义
+import RdbUtil from '../common/RdbUtil'; // 导入数据库工具类
+
+/**
+ * 账户表配置常量
+ * 包含表结构定义和列信息
+ */
+const TABLE_CONFIG = {
+  name: 'accountTable', // 数据库表名
+  // 建表SQL语句
+  sql: `CREATE TABLE IF NOT EXISTS accountTable (
+    id INTEGER PRIMARY KEY AUTOINCREMENT,       // 自增主键
+    accountType INTEGER NOT NULL,              // 账户类型(0-支出/1-收入)
+    typeText TEXT NOT NULL,                    // 类型描述文本
+    amount REAL NOT NULL                       // 金额(浮点数)
+  )`,
+  // 列名数组(as const确保类型推导为字面量)
+  columns: ['id', 'accountType', 'typeText', 'amount'] as const
+};
+
+/**
+ * 账户表操作类
+ * 封装对accountTable表的CRUD操作
+ */
+export default class AccountTable {
+  private rdbUtil: RdbUtil; // 数据库工具实例
+
+  /**
+   * 构造函数
+   * @param context Ability上下文(从UI组件传入)
+   */
+  constructor(context: any) {
+    // 初始化RdbUtil实例
+    this.rdbUtil = new RdbUtil(
+      context,
+      TABLE_CONFIG.name,
+      TABLE_CONFIG.sql,
+      [...TABLE_CONFIG.columns] // 展开列数组(解决arkts-no-spread错误)
+    );
+  }
+
+  /**
+   * 初始化数据库
+   * 创建表结构(如果不存在)
+   */
+  async init(): Promise<void> {
+    await this.rdbUtil.initialize();
+  }
+
+  /**
+   * 插入新账户记录
+   * @param account 账户数据(排除id字段)
+   * @returns 插入的行ID
+   */
+  async insert(account: Omit<AccountData, 'id'>): Promise<number> {
+    const valueBucket: relationalStore.ValuesBucket = {
+      accountType: account.accountType, // 账户类型
+      typeText: account.typeText,      // 类型描述
+      amount: account.amount           // 金额
+    };
+    return this.rdbUtil.insert(valueBucket);
+  }
+
+  /**
+   * 更新账户记录
+   * @param account 完整的账户数据(包含id)
+   * @returns 受影响的行数
+   */
+  async update(account: AccountData): Promise<number> {
+    // 创建查询条件(根据ID)
+    const predicates = this.rdbUtil.createPredicates();
+    predicates.equalTo('id', account.id);
+
+    // 准备更新数据
+    const valueBucket: relationalStore.ValuesBucket = {
+      accountType: account.accountType,
+      typeText: account.typeText,
+      amount: account.amount
+    };
+
+    return this.rdbUtil.update(predicates, valueBucket);
+  }
+
+  /**
+   * 删除账户记录
+   * @param id 要删除的记录ID
+   * @returns 受影响的行数
+   */
+  async delete(id: number): Promise<number> {
+    const predicates = this.rdbUtil.createPredicates();
+    predicates.equalTo('id', id); // 设置ID条件
+    return this.rdbUtil.delete(predicates);
+  }
+
+  /**
+   * 查询所有账户记录
+   * @returns 账户数据数组
+   */
+  async queryAll(): Promise<AccountData[]> {
+    const predicates = this.rdbUtil.createPredicates();
+    const resultSet = await this.rdbUtil.query(predicates);
+
+    const results: AccountData[] = [];
+    try {
+      // 遍历结果集
+      while (resultSet.goToNextRow()) {
+        results.push({
+          // 使用getLong读取整数类型(SQLite的INTEGER实际是64位)
+          id: resultSet.getLong(resultSet.getColumnIndex('id')),
+          accountType: resultSet.getLong(resultSet.getColumnIndex('accountType')),
+          typeText: resultSet.getString(resultSet.getColumnIndex('typeText')),
+          amount: resultSet.getDouble(resultSet.getColumnIndex('amount'))
+        });
+      }
+    } finally {
+      // 确保关闭结果集(避免内存泄漏)
+      resultSet.close();
+    }
+    return results;
+  }
+
+  /**
+   * 按类型查询账户记录
+   * @param accountType 账户类型(0/1)
+   * @returns 匹配的账户数据数组
+   */
+  async queryByType(accountType: number): Promise<AccountData[]> {
+    const predicates = this.rdbUtil.createPredicates();
+    predicates.equalTo('accountType', accountType); // 设置类型条件
+
+    const resultSet = await this.rdbUtil.query(predicates);
+    const results: AccountData[] = [];
+
+    try {
+      while (resultSet.goToNextRow()) {
+        results.push({
+          id: resultSet.getLong(resultSet.getColumnIndex('id')),
+          accountType: resultSet.getLong(resultSet.getColumnIndex('accountType')),
+          typeText: resultSet.getString(resultSet.getColumnIndex('typeText')),
+          amount: resultSet.getDouble(resultSet.getColumnIndex('amount'))
+        });
+      }
+    } finally {
+      resultSet.close();
+    }
+    return results;
+  }
 }
 ```
-
 
 
 
