--- a/实验三指导文档.md
+++ b/实验三指导文档.md
@@ -544,9 +544,18 @@ export default class AccountTable {
   }
 }
 ```
-
+````// src/main/ets/database/AccountData.ts
+export default interface AccountData {
+    id: number;
+    accountType: number;
+    typeText: string;
+    amount: number;
+}```
 
 
 #### 4.2 结果验证
 
 <在此处填写你的结果截图></font>
+<![图片]qq1.jpg>
+
+<![图片]qq2.jpg>
