--- a/实验三指导文档.md
+++ b/实验三指导文档.md
@@ -556,6 +556,6 @@ export default interface AccountData {
 #### 4.2 结果验证
 
 <在此处填写你的结果截图></font>
-<![图片](qq1.jpg）>
 
-<![图片](qq2.jpg）>
+<![图片](qq1.jpg)>
+<![图片](qq2.jpg)>
