--- a/实验三指导文档.md
+++ b/实验三指导文档.md
@@ -557,5 +557,5 @@ export default interface AccountData {
 
 <在此处填写你的结果截图></font>
 
-<![图片](qq1.jpg)>
-<![图片](qq2.jpg)>
+<![图片](Image_102576269053159.jpg)>
+<![图片](Image_102574408978368.jpg)>
